[package]
name = "hawk_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core SDK for sending error events to Hawk backend"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
crossbeam-channel = "0.5"
backtrace = "0.3"
