[package]
name = "hawk_core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core SDK for sending error events to Hawk backend"

[dependencies]
serde.workspace = true
serde_json.workspace = true
backtrace.workspace = true
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
crossbeam-channel = "0.5"
